fix(navigation): theme contrasté

--- a/src/component/navigation/style/module/_mega-menu.scss
+++ b/src/component/navigation/style/module/_mega-menu.scss
@@ -64,6 +64,10 @@
 
   &__category {
     @include font-weight(bold);
+
+    @include forced-colors {
+      border-bottom: 1px solid;
+    }
   }
 
   &__list {
